# avr-rust-project

./: Cargo.toml  Makefile  arduino.json
avr-core/src/: cmp.rs  intrinsics.rs  lib.rs  marker.rs
blink/: Cargo.toml  arduino.json
blink/src/: main.rs
